* Fixed related to styling and the background image. The latter still needs to be tweaked though. * Added theme color for some eyecandy on mobile. Looks good on Android, iOS does not care too much...

--- a/css/trivaa.css
+++ b/css/trivaa.css
@@ -12,12 +12,10 @@ body {
 	background-repeat: no-repeat;
 }
 
-.container {
-	background-color: transparent;
-}
-
-.row {
-	background-color: transparent;
+@media (max-width: 1280px) {
+	body {
+		background-image: url(../img/background-small.png);
+	}
 }
 
 hr {
